# memory-layer-rnd

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: upstream-learning.md
docs/adr/: 0001-testable-memory.md  0002-temporal-and-scoped-memory.md  0003-recency-weighting-and-recall-compaction.md  0004-semantic-dedup-on-write.md  0005-time-decay-invalidation.md  0006-graph-edge-fact-linking.md  0007-conflict-resolution-strategies.md  0008-retrieval-eval-harness.md  0009-memory-as-contract-boundaries.md
src/memory_layer_rnd/: __init__.py  blocks.py  contract.py  decay.py  dedup.py  demo.py  graph.py  harness.py  memory.py  resolver.py  retrieval_eval.py  retrieval_metrics.py  scopes.py  temporal.py
tests/: test_contract.py  test_memory_layer.py  test_retrieval_eval.py
